# dew-p-qfl-unlearning

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: METHODOLOGY.md
hpc/: README.md
hpc/slurm/: 01_run_main_experiment.slurm  02_run_sweeps.slurm  03_run_reconstruction.slurm  04_generate_deliverables.slurm  submit_all.sh
results/json/: extended_experiment.json  main_experiment_raw.json
results/tables/: ALL_TABLES.md  ablation_non_iid.csv  ablation_num_clients.csv  main_results_raw.csv  pruning_fraction_sweep.csv  scalability.csv  table01_dataset_summary.csv  table02_federated_training_configuration.csv  table03_baseline_comparison.csv  table04_utility_comparison.csv  table05_forgetting_comparison.csv  table06_privacy_comparison.csv  table07_runtime_comparison.csv  table08_statistical_significance.csv  table09_ablation_study.csv  table10_hyperparameter_sensitivity.csv
scripts/: generate_deliverables.py  run_full_pipeline.sh  run_main_experiment.py  run_reconstruction.py  run_sweeps.py
src/qflewp/: __init__.py  circuit.py  data.py  entanglement.py  evaluate.py  federated.py  pipeline.py  pruning.py  q1_deliverables.py  qfim.py  reconstruct.py  sweeps.py
tests/: test_qflewp.py
